# n8n-Workflow-Popularity-System

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  api_workflows.json  docker-compose.yml  pyproject.toml  requirements.txt  seed_data.py  verify_api.py
alembic/: env.py
alembic/versions/: a5a1b33198f0_initial_migration.py
app/: main.py  models.py  scheduler.py  schemas.py
app/api/: endpoints.py
app/collectors/: forum.py  trends.py  youtube.py
app/core/: config.py  decorators.py  normalization.py
app/services/: collection_service.py  novelty_service.py
tests/: conftest.py  test_api.py  test_collectors.py
